--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "ng-socket-io": "^0.1.11",
     "ng2-file-upload": "^1.2.1",
     "ng2-modal": "0.0.25",
+    "ng2-responsive": "^0.8.4",
     "ng2-socket-io": "^0.1.7",
     "ngx-carousel": "^1.3.2",
     "ngx-siema": "^2.0.0",
